--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -157,6 +157,15 @@
             android:textSize="16sp"
             android:text="사용 금액 : 0원"/>
 
+        <TextView
+            android:id="@+id/winMoneyTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:text="당첨금액 : 0원"/>
+
+
     </LinearLayout>
 
 </layout>
