등수별 카운팅

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -166,7 +166,7 @@
             android:text="당첨금액 : 0원"/>
 
         <TextView
-            android:id="@+id/fisrtRankCount"
+            android:id="@+id/fisrtRankCountTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -174,7 +174,7 @@
             android:text="1등 : 0 회"/>
 
         <TextView
-            android:id="@+id/secondRankCount"
+            android:id="@+id/secondRankCountTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -182,7 +182,7 @@
             android:text="2드"/>
 
         <TextView
-            android:id="@+id/thirdRankCount"
+            android:id="@+id/thirdRankCountTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -190,7 +190,7 @@
             android:text="3등"/>
 
         <TextView
-            android:id="@+id/fourthRankCount"
+            android:id="@+id/fourthRankCountTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -198,7 +198,7 @@
             android:text="4등"/>
 
         <TextView
-            android:id="@+id/fifthRankCount"
+            android:id="@+id/fifthRankCountTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -206,7 +206,7 @@
             android:text="5등"/>
 
         <TextView
-            android:id="@+id/noRankCount"
+            android:id="@+id/noRankCountTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
